# aeolus

./: .Dockerignore  .gitignore  Dockerfile  aeolus.sql  app.py  biodiversity.ipynb  elevation.ipynb  main.py  notebook.ipynb  pyproject.toml  requirements.txt  streamlit.ipynb
jobs/: build.job  jupyter.job
masks/: airport_mask.npy  airport_mask_Bahia.npy  airport_mask_Nordeste.npy  airport_mask_Piaui.npy  airport_mask_Rio Grande do Norte.npy  airport_mask_Rio Grande do Sul.npy  brazil_and_offshore_mask_Bahia.npy  brazil_and_offshore_mask_Nordeste.npy  brazil_and_offshore_mask_Piaui.npy  brazil_and_offshore_mask_Rio Grande do Norte.npy  brazil_mask_Bahia.npy  brazil_mask_Nordeste.npy  brazil_mask_Piaui.npy  brazil_mask_Rio Grande do Sul.npy  offshore_mask_Bahia.npy  offshore_mask_Nordeste.npy  offshore_mask_Piaui.npy  offshore_mask_Rio Grande do Norte.npy  offshore_mask_Rio Grande do Sul.npy  population_mask.npy  population_mask_Bahia.npy  population_mask_Nordeste.npy  population_mask_Piaui.npy  population_mask_Rio Grande do Norte.npy  population_mask_Rio Grande do Sul.npy  power_density.npy  power_density_Bahia.npy  power_density_Nordeste.npy  power_density_Piaui.npy  power_density_Rio Grande do Norte.npy  power_density_Rio Grande do Sul.npy  powerlines.npy  powerlines_Bahia.npy  powerlines_Nordeste.npy  powerlines_Piaui.npy  powerlines_Rio Grande do Norte.npy  powerlines_Rio Grande do Sul.npy  protected_areas_mask.npy  protected_areas_mask_Bahia.npy  protected_areas_mask_Nordeste.npy  (+21 more)
report/: export.bib  report.md
src/: data.py  infrastructure.py  topography.py  (+1 more)
