[tool.poetry]
name = "aeolus"
version = "0.1.0"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.13.2"
plotly = "^5.15.0"
shapely = "^2.0.1"
numpy = "^1.25.1"
tqdm = "^4.65.0"
jupyterlab = "^4.0.2"
rasterio = "^1.3.8"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
